[project]
name = "haystack_human_tool"
version = "0.2.0"
description = "A human in the loop tool to refine queries. For use with haystack agents"
authors = [
    {name = "Roland Tannous", email = "rolandtannous@gravityml.com"},
]
dependencies = ["farm-haystack>=1.15.0", "redis", "haystack-memory", "bleach"]
requires-python = ">=3.9.16"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gravityml/haystack-human-tool"
"Bug Tracker" = "https://github.com/gravityml/haystack-human-tool/issues"


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
